feat: procedures (#19)
* refactor: make symols classes

* feat: build in fuctions

* fix: variables can't be assinged to void'

* refactor: scoped functios

* feat: build in random

* feat: type conversation

* refactor: add automatic implicit conversions

* feat: allow optional type declaration

* feat: function declaration

* refactor: stack call

* refactor: better readbility

* fix: for scope leak

* feat: add mod binary op

* feat: continue and break

* fix: while continue must pass to the validation instead of body

* fix(test): fix the mod test

* feat: suffix expressions

* feat: prefix support

* feat: assignment operation