@@ -3,15 +3,18 @@ package codeanalysis.syntax.statements;
 import codeanalysis.syntax.SyntaxKind;
 import codeanalysis.syntax.SyntaxNode;
 import codeanalysis.syntax.SyntaxToken;
+import codeanalysis.syntax.clause.TypeClauseSyntax;
 import codeanalysis.syntax.expression.ExpressionSyntax;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class VariableDeclarationStatementSyntax extends StatementSyntax {
     private final SyntaxToken keyword;
 
     private final SyntaxToken identifier;
+
+    private final TypeClauseSyntax type;
 
     private final SyntaxToken equals;
 
@@ -21,13 +24,23 @@ public class VariableDeclarationStatementSyntax extends StatementSyntax {
 
     private final List<SyntaxNode> children;
 
-    public VariableDeclarationStatementSyntax(SyntaxToken keyword, SyntaxToken identifier, SyntaxToken equals, ExpressionSyntax initializer) {
+    public VariableDeclarationStatementSyntax(SyntaxToken keyword, SyntaxToken identifier, TypeClauseSyntax type, SyntaxToken equals, ExpressionSyntax initializer) {
         this.keyword = keyword;
         this.identifier = identifier;
+        this.type = type;
         this.equals = equals;
         this.initializer = initializer;
         this.kind = SyntaxKind.VARIABLE_DECLARATION_STATEMENT;
-        this.children = Arrays.asList(keyword, identifier, equals, initializer);
+        List<SyntaxNode> children = new ArrayList<>();
+        children.add(keyword);
+        children.add(identifier);
+        if (type != null)
+            children.add(type);
+        if (equals != null) {
+            children.add(equals);
+            children.add(initializer);
+        }
+        this.children = List.copyOf(children);
     }
 
     public SyntaxToken getKeyword() {
@@ -44,6 +57,10 @@ public class VariableDeclarationStatementSyntax extends StatementSyntax {
 
     public ExpressionSyntax getInitializer() {
         return initializer;
+    }
+
+    public TypeClauseSyntax getType() {
+        return type;
     }
 
     @Override
